[project]
name = "ciencia-de-dados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
